# SQBadge-rs

./: 404.html  CNAME  Cargo.toml  index-16118d3bf9217919.js  index-16118d3bf9217919_bg.wasm  index-171fd4054ed8243f.css  index-2136afe35a5fe281.js  index-2136afe35a5fe281_bg.wasm  index-226c4cb26e828b58.js  index-226c4cb26e828b58_bg.wasm  index-23fd73172b8ad585.js  index-23fd73172b8ad585_bg.wasm  index-249188156b5f3011.js  index-249188156b5f3011_bg.wasm  index-29519c0736a9ee99.js  index-29519c0736a9ee99_bg.wasm  index-2c4703b12cecdb01.js  index-2c4703b12cecdb01_bg.wasm  index-2d471944e960bda6.css  index-3aa229fdc363eb8d.js  index-3aa229fdc363eb8d_bg.wasm  index-46ee0552d841f8c0.js  index-46ee0552d841f8c0_bg.wasm  index-4d703ae86a5c34a2.js  index-4d703ae86a5c34a2_bg.wasm  index-579d4da05e9e587b.js  index-579d4da05e9e587b_bg.wasm  index-5dc8059b614ad7d9.js  index-5dc8059b614ad7d9_bg.wasm  index-6e7c0c1991ce2085.css  index-7194c908dc527f17.css  index-735c7af759513c9.js  index-735c7af759513c9_bg.wasm  index-8118e195e431ca2f.css  index-ad9b8d84ad078672.js  index-ad9b8d84ad078672_bg.wasm  index-b1c61ba5c643dde6.js  index-b1c61ba5c643dde6_bg.wasm  index-b58235e991b8fc9b.js  index-b58235e991b8fc9b_bg.wasm  (+13 more)
.github/workflows/: code-style.yaml  deploy-gh-page.yaml
snippets/stellar-badge-wasm-635177554f0342b4/src/: albedo.js
src/: albedo.js  albedo.rs  albedo_response.rs  main.rs  view.rs
src/js/: albedo.js  albedo.rs  albedo_response.rs  fetch.rs  mod.rs
src/pages/: home.rs
src/stellar/: mod.rs  stellar.rs  stellar_data.rs
src/util/: badge_check.rs  error.rs  mod.rs  proof_encoding.rs
src/webpage/: html_implements.rs  mod.rs  view.rs
style/: bulma_floating_btn.sass  index.scss
(+8 files in other folders)
