[package]
name = "stellar-badge-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew.git"}
yew-router = {git = "https://github.com/yewstack/yew.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0.59"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
js-sys="0.3.51"
log = {version = "0.4.6", features = ["release_max_level_info"] } 
wasm-logger = "0.2.0"
toml="0.5.3"
urldecode="0.1.1"
itertools="0.10.1"
base64="0.13.0"
futures = "0.3.17"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dependencies.chrono]
version = "0.4"
features = [
  'wasmbind'
]